deps/jansson/test/suites/invalid/object-in-unterminated-array/error.normal
2 0 4
']' expected near end of file
